--- a/module/cliente/view/cliente/cliente/novo.phtml
+++ b/module/cliente/view/cliente/cliente/novo.phtml
@@ -1,12 +1,7 @@
     <h1><i class="fas fa-bars"></i><a href="<?= $this->url('indexCliente'); ?>">Clientes</a> / novo </h1>
     <h2>Cadastrar um novo cliente</h2>
     <div class="conteudo-sistema">
-      <a href="https://dev.powerbi.com/apps" target="_blank" class="botao" style="float: right;margin-bottom: 10px;margin-left: 10px;"><i class="fas fa-key"></i> Criar credenciais</a>
 
-      <a href="<?= $this->url('novoCliente'); ?>" class="botao" style="float: right;margin-bottom: 10px"><i class="far fa-plus-square"></i> Novo</a>
-
-      
-
-      <?php echo $this->partial('form/generic', array('form'=> $formCliente, 'route'=> ''))  ?>
+      <?php echo $this->partial('form/cliente', array('form'=> $formCliente, 'route'=> ''))  ?>
 
     </div>
