--- a/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
+++ b/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
@@ -1,10 +1,10 @@
 <?php if(!empty($dashboard['link_google'])): ?>
-<iframe src="<?= $dashboard['link_google'] ?>" style="width: 100%; height: 600px;"></iframe>
+<iframe src="<?= $dashboard['link_google'] ?>" style="width: 100%;height: 87%;"></iframe>
 <?php endif; ?>
 
 
 <?php if(!empty($dashboard['workspace_id']) && !empty($dashboard['report_id'])): ?>
-  <div id="reportContainer" style="height: 700px;"></div>
+  <div id="reportContainer" style="height: 87%;width: 100%;"></div>
   <script>
     var embedConfiguration= {
       type: 'report',
