--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -8,6 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-KX356LG');</script>
       <meta charset="utf-8">
+      <meta http-equiv="Content-Language" content="pt-br">
       <meta name="google-signin-client_id" content="119263952091-gdpfe1a4arv7dj1g2f4uia1pf517tk44.apps.googleusercontent.com">
       <?php echo $this->headTitle('Cognitive - '. $this->translate('login'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
@@ -46,8 +47,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="conteiner" class="login">
         
 <div id="particles-js">
-    
-<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1920" height="647"></canvas></div>
+    <canvas class="particles-js-canvas-el">
+    </canvas>
+</div>
+
 
 
 <div class="bloco-login">
@@ -61,7 +64,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </div>
-
 <script>
 
 
