--- a/module/cliente/view/cliente/cliente/alterar.phtml
+++ b/module/cliente/view/cliente/cliente/alterar.phtml
@@ -1,18 +1,14 @@
     <h1><i class="fas fa-bars"></i><a href="<?= $this->url('indexCliente'); ?>">Clientes</a> / alterar </h1>
     <h2>Alterar cliente</h2>
     <div class="conteudo-sistema">
-      <a href="https://dev.powerbi.com/apps" target="_blank" class="botao" style="float: right;margin-bottom: 10px;margin-left: 10px;"><i class="fas fa-key"></i> Criar credenciais</a>
-      
-      <a href="<?= $this->url('novoCliente'); ?>" class="botao" style="float: right;margin-bottom: 10px"><i class="far fa-plus-square"></i> Novo</a>
-      <br>
-      <?php echo $this->partial('form/generic', array('form'=> $formCliente, 'route'=> ''))  ?>
+      <?php echo $this->partial('form/cliente', array('form'=> $formCliente, 'route'=> ''))  ?>
 
 
       <!-- SUBFORM -->
         <div class="bloco-padrao">
           <a id="link-usuario" href="<?= $this->url('alterarUsuarioCliente', array('id' => $cliente['id'])); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo usuário</a>
         </div>
-
+        
         <div class="bloco-padrao">
           <h2>Usuários do cliente <?= $cliente['nome'] ?></h2>
            
@@ -32,8 +28,8 @@
                         <td style="text-align: center"><?= $usuario['login']; ?></td>
                         <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
                         <td style="text-align: center;">
-                            <a href="<?= $this->url('alterarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
-                            <a  onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                            <a href="<?= $this->url('alterarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>" class="bt-editar" title="Alterar usuário"><i class="fas fa-edit"></i></a>
+                            <a  onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar" title="Deletar usuário"><i class="fas fa-minus-circle"></i></a>
                         </td>
                     </tr>
                   <?php endforeach; ?>
@@ -90,3 +86,4 @@
         });
       });
     </script>
+    
