--- a/module/cliente/view/cliente/cliente/alterarcliente.phtml
+++ b/module/cliente/view/cliente/cliente/alterarcliente.phtml
@@ -27,8 +27,8 @@
                         <td style="text-align: center"><?= $usuario['login']; ?></td>
                         <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
                         <td style="text-align: center;">
-                            <a href="<?= $this->url('alterarUsuarioClienteCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
-                            <a  onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                            <a href="<?= $this->url('alterarUsuarioClienteCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>" class="bt-editar" title="Alterar usuário"><i class="fas fa-edit"></i></a>
+                            <a  onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar" title="Deletar usuário"><i class="fas fa-minus-circle"></i></a>
                         </td>
                     </tr>
                   <?php endforeach; ?>
