--- a/module/dashboard/view/dashboard/categoria/index.phtml
+++ b/module/dashboard/view/dashboard/categoria/index.phtml
@@ -15,11 +15,11 @@
               </tr>
               <?php foreach($categorias as $categoria): ?>
                 <tr>
-                  <td style="text-align: center"><img src="<?= $this->basePath($categoria['icone']) ?>"> <?= $categoria['nome']; ?></td>
+                  <td style="text-align: center"><img src="<?= $this->basePath($categoria['icone']) ?>" style="width: 50px; height: 50px;"> <?= $categoria['nome']; ?></td>
                   <td style="text-align: center"><?= $categoria['ordem']; ?>º</td>
                   <td style="text-align: center;">
-                      <a href="<?= $this->url('alterarCategoria', array('id' => $categoria['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
-                      <a onclick="alerta('<?= $this->url('deletarCategoria', array('id' => $categoria['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar a categoria de dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                      <a title="Alterar categoria" href="<?= $this->url('alterarCategoria', array('id' => $categoria['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                      <a title="Deletar categoria" onclick="alerta('<?= $this->url('deletarCategoria', array('id' => $categoria['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar a categoria de dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
                   </td>
                 </tr>
               <?php endforeach; ?>
