--- a/module/dashboard/view/dashboard/dashboard/index.phtml
+++ b/module/dashboard/view/dashboard/dashboard/index.phtml
@@ -22,12 +22,12 @@
                 <tr>
                     <td style="text-align: center"><?= $this->caracterVazio($dashboard['nome_categoria']); ?></td>
                     <td style="text-align: center">
-                      <img src="<?= $this->basePath($dashboard['icone']); ?>"> <?= $dashboard['nome']; ?>
+                      <img src="<?= $this->basePath($dashboard['icone']); ?>" style="width: 50px; height: 50px;"> <?= $dashboard['nome']; ?>
                     </td>
                     <td style="text-align: center"><?= $dashboard['ordem']; ?>º</td>
                     <td style="text-align: center;">
-                        <a href="<?= $this->url('alterarDashboard', array('id' => $dashboard['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
-                        <a onclick="alerta('<?= $this->url('deletarDashboard', array('id' => $dashboard['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                        <a title="Alterar dashboard" href="<?= $this->url('alterarDashboard', array('id' => $dashboard['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                        <a title="Deletar dashboard" onclick="alerta('<?= $this->url('deletarDashboard', array('id' => $dashboard['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
                     </td>
                 </tr>
               <?php endforeach; ?>
