--- a/module/invoice/view/invoice/invoice/index.phtml
+++ b/module/invoice/view/invoice/invoice/index.phtml
@@ -29,17 +29,17 @@
 
                     <td style="text-align: center;">
                       <?php if($usuario['id_usuario_tipo'] == 3): ?>
-                        <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="bt-download"><i class="fas fa-download"></i></a>
+                        <a title="Download do invoice" href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="bt-download"><i class="fas fa-download"></i></a>
                       <?php else: ?>
-                        <a href="<?= $this->url('alterarInvoice', array('id' => $invoice['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                        <a title="Alterar invoice" href="<?= $this->url('alterarInvoice', array('id' => $invoice['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
 
-                        <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="bt-download"><i class="fas fa-download"></i></a>
+                        <a title="Download do invoice" href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="bt-download"><i class="fas fa-download"></i></a>
                         
                         <?php if($invoice['pago'] == 'N'): ?>
-                          <a onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" class="bt-pagar"><i class="fas fa-credit-card"></i></a>
+                          <a title="Pagar invoice" onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" class="bt-pagar"><i class="fas fa-credit-card"></i></a>
                         <?php endif; ?>
                         
-                        <a onclick="alerta('<?= $this->url('deletarInvoice', array('id' => $invoice['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o invoice?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                        <a title="Deletar invoice" onclick="alerta('<?= $this->url('deletarInvoice', array('id' => $invoice['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o invoice?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
                       <?php endif; ?>
                     </td>
                 </tr>
