--- a/module/usuario/view/usuario/usuario/indexcliente.phtml
+++ b/module/usuario/view/usuario/usuario/indexcliente.phtml
@@ -28,7 +28,7 @@
                     <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
                     <td style="text-align: center;">
                         <a title="Alterar usuário" href="<?= $this->url('usuarioAlterarCliente', array('id' => $usuario['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
-                        <a title="Deletar usuário" onclick="alerta('<?= $this->url('usuarioDeletarCliente', array('id' => $usuario['id'])) ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                        <a title="Deletar usuário" onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => '0', 'usuario' => $usuario['id'], 'redir' => 'U')) ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
                     </td>
                 </tr>
 
