--- a/module/usuario/view/usuario/usuario/login.phtml
+++ b/module/usuario/view/usuario/usuario/login.phtml
@@ -19,11 +19,15 @@
         </p>     
 
         <div class="logar-redes">
+                  
+
             <strong>Fazer Login Usando: </strong>
             <div id="my-signin2"></div>
             
 
-           <img src="images/ms-symbollockup_signin_light.svg" alt="Downloadable &quot;Sign in with Microsoft&quot; button light theme SVG" data-linktype="relative-path">
+          
+           <img onclick="location.href='<?= $this->url('loginMicrosoft', array('acao' => 'S')); ?>'" src="images/ms-symbollockup_signin_light.svg" alt="Downloadable &quot;Sign in with Microsoft&quot; button light theme SVG" data-linktype="relative-path">
+            
 
         </div>
 
