login social alteração para sumir filtro e badas da dash

--- a/module/cliente/view/cliente/cliente/selecionarcliente.phtml
+++ b/module/cliente/view/cliente/cliente/selecionarcliente.phtml
@@ -29,4 +29,12 @@
 
     </div>
 
+    <script type="text/javascript">
+      $().ready(function () {
+        $('.fechar-menu span').toggleClass('cross');
+        $('.menu-sistema').toggleClass('open');
+        $('.cont-admin').toggleClass('open');
+    });
+    </script>
+
 
