--- a/module/usuario/view/usuario/usuario/loginmicrosoft.phtml
+++ b/module/usuario/view/usuario/usuario/loginmicrosoft.phtml
@@ -1,9 +1,12 @@
-<form method="POST" id="form" action="<?= $this->url("loginMicrosoft", array('acao' => 'N')); ?>">
+
+<form method="POST" id="form" action="<?= $this->url("processarLoginMicrosoft", array('acao' => 'N')); ?>">
   <input type="hidden" id="token" name="token" value="">
 </form>
 <script type="text/javascript">
   $(document).ready(function(){
     $("#token").val(document.URL);
-    //$('#form').submit();
+    $('#form').submit();
   });
 </script>
+
+<scri
