--- a/module/usuario/view/usuario/usuario/novo.phtml
+++ b/module/usuario/view/usuario/usuario/novo.phtml
@@ -4,3 +4,14 @@
       <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
 
     </div>
+<script type="text/javascript">
+  var maskBehavior = function (val) {
+     return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
+    },
+    options = {onKeyPress: function(val, e, field, options) {
+     field.mask(maskBehavior.apply({}, arguments), options);
+     }
+    };
+     
+    $('#telefone').mask(maskBehavior, options);
+</script>
