--- a/module/cliente/view/cliente/cliente/selecionarcliente.phtml
+++ b/module/cliente/view/cliente/cliente/selecionarcliente.phtml
@@ -30,11 +30,11 @@
     </div>
 
     <script type="text/javascript">
-      $().ready(function () {
+     /* $().ready(function () {
         $('.fechar-menu span').toggleClass('cross');
         $('.menu-sistema').toggleClass('open');
         $('.cont-admin').toggleClass('open');
-    });
+    });*/
     </script>
 
 
