--- a/module/application/view/layout/layoutClienteAdmin.phtml
+++ b/module/application/view/layout/layoutClienteAdmin.phtml
@@ -195,13 +195,36 @@ function signOut() {
       <?php endif; ?>
     }
 
+     var menuHidden = 'N';
     $().ready(function () {
+      <?php if($usuario['menu_hidden'] == 'S'): ?>
+        menuHidden = 'S';
+        $('.fechar-menu span').toggleClass('cross');
+        $('.menu-sistema').toggleClass('open');
+        $('.cont-admin').toggleClass('open');
+      <?php else: ?>
+        <?php if($rota == 'selecionarCliente'): ?>
+          $('.fechar-menu span').toggleClass('cross');
+          $('.menu-sistema').toggleClass('open');
+          $('.cont-admin').toggleClass('open');
+        <?php endif; ?>
+      <?php endif; ?>
+      
       $('.fechar-menu').click(function () {
           $('.fechar-menu span').toggleClass('cross');
           $('.menu-sistema').toggleClass('open');
           $('.cont-admin').toggleClass('open');
+          <?php if($rota != 'selecionarCliente'): ?>
+            if(menuHidden == 'S'){
+              menuHidden = 'N';
+            }else{
+              menuHidden = 'S';
+            }
+            salvarMenuHidden(menuHidden);
+          <?php endif; ?>
+      });
 
-      }
+    });
 </script> 
 
        </div>
