--- a/module/application/view/layout/layoutVazio.phtml
+++ b/module/application/view/layout/layoutVazio.phtml
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Language" content="pt-br">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-     <?php echo $this->headTitle('Cognitive')->setSeparator(' - ')->setAutoEscape(false) ?>
+     <?php echo $this->headTitle('Sigmaflow')->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
