--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <meta charset="utf-8">
       <meta http-equiv="Content-Language" content="pt-br">
       <meta name="google-signin-client_id" content="119263952091-gdpfe1a4arv7dj1g2f4uia1pf517tk44.apps.googleusercontent.com">
-      <?php echo $this->headTitle('Cognitive - '. $this->translate('login'))->setSeparator(' - ')->setAutoEscape(false) ?>
+      <?php echo $this->headTitle('Sigmaflow - '. $this->translate('login'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
       <?php echo $this->headMeta()
           ->appendName('viewport', 'width=device-width, initial-scale=1.0')
