--- a/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
+++ b/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
@@ -2,7 +2,6 @@
 <iframe src="<?= $dashboard['link_google'] ?>" style="width: 100%;height: 87%;"></iframe>
 <?php endif; ?>
 
-
 <?php if(!empty($dashboard['workspace_id']) && !empty($dashboard['report_id'])): ?>
   <div id="reportContainer" style="height: 87%;width: 100%;"></div>
   <script>
@@ -27,7 +26,9 @@
       <?php if($dashboard['pagina_power_bi'] != ''): ?>
         page = <?= $dashboard['pagina_power_bi'] ?>;
       <?php endif; ?>
+
       report.getPages().then(pages => pages[page].setActive()); 
     });
   </script>
 <?php endif; ?>
+<button onclick="console.log(report.getPages());">AQUI!!</button>
