--- a/module/application/view/layout/layoutEdicao.phtml
+++ b/module/application/view/layout/layoutEdicao.phtml
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         ?>
 
         <!-- styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/x-icon', 'href' => $this->basePath() . '/img/favicon.ico'))
                         ->prependStylesheet($this->basePath() . '/css/sistema.css')
                         ->prependStylesheet($this->basePath() . '/css/autocomplete.css')
                         ->prependStylesheet($this->basePath() . '/css/jquery-confirm.css')
