--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <?php 
       echo $this->headLink(array(
                       'rel' => 'shortcut icon', 
-                      'type' => 'image/vnd.microsoft.icon', 
+                      'type' => 'image/x-icon', 
                       'href' => $this->basePath() . '/img/favicon.ico'
                       )
                   )
