--- a/module/application/view/partials/formPesquisa.phtml
+++ b/module/application/view/partials/formPesquisa.phtml
@@ -11,7 +11,7 @@
       <button type="submit" name="pesquisar" style="float: right;" value="pesquisar">
           <i class="fas fa-search"></i> Pesquisar
       </button>
-
+      <button onclick="window.reload();" style="position: absolute;top: 15px;right: 15px;"><i class="fas fa-window-close"></i></button>
 
     </p>
 
