--- a/module/cliente/view/cliente/cliente/ativarusuariocliente.phtml
+++ b/module/cliente/view/cliente/cliente/ativarusuariocliente.phtml
@@ -2,8 +2,8 @@
     <?php if($usuario): ?>
       <?php echo $this->partial('form/umacoluna', array('form'=> $formUsuario, 'route'=> '', 'nomeBotao' => 'Ativar conta')) ?>  
     <?php else: ?>
-      <div class="alert alert-warning" role="alert">
-        Usuário não encontrado, verifique se seu link é válido ou entre em contato com o administrador.
+      <div class="alert alert-warning" role="alert" style="position: static !important;">
+        Token inválido, a senha deste usuário já foi recuperada!
       </div>
     <?php endif; ?>
 </div>
