--- a/module/usuario/view/usuario/usuario/alterar.phtml
+++ b/module/usuario/view/usuario/usuario/alterar.phtml
@@ -41,3 +41,15 @@
       <?php endif; ?>
 
     <?php endif; ?>
+
+    <script type="text/javascript">
+      var maskBehavior = function (val) {
+         return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
+        },
+        options = {onKeyPress: function(val, e, field, options) {
+         field.mask(maskBehavior.apply({}, arguments), options);
+         }
+        };
+         
+        $('#telefone').mask(maskBehavior, options);
+</script>
